--- a/main.css
+++ b/main.css
@@ -9,6 +9,10 @@ nav {
     position: relative;
 }
 
+.advance {
+    background-color: #F2F3F4;
+}
+
 ul {
     list-style: none;
     margin: 0;
@@ -40,6 +44,59 @@ li a:hover {
 
 .container {
     position: relative;
+}
+
+.header1 {
+    border: 0;
+    color: #CB4335;
+    font-size: 20px;
+}
+
+.header2 {
+    float: left;
+    display: inline-block;
+    min-width: 167px;
+    width: 16%;
+    font-size: 16px;
+    height: 42px;
+    vertical-align: middle;
+    padding-top: 21px;
+}
+
+hr {
+    margin: 0;
+    border-top: solid #F2F3F4 1px;
+}
+
+table {
+    border: none;
+    width: 100%;
+}
+
+.column1 {
+    float: left;
+    font-size: 13px;
+    display: inline-block;
+    height: 37px;
+    line-height: 16px;
+    min-width: 167px;
+    vertical-align: middle;
+    width: 16%;
+}
+
+.column2 {
+    float: left;
+    display: inline-block;
+    min-width: 167px;
+    min-height: 41px;
+    vertical-align: middle;
+    width: 50%;
+}
+
+.adv-form {
+    border: 1px solid #D9D9D9;
+    height: 22px;
+    width: 100%;
 }
 
 .banner {
