--- a/main.css
+++ b/main.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 
+* {
+/*    border: solid red 1px;*/
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -77,10 +81,9 @@ table {
     float: left;
     font-size: 13px;
     display: inline-block;
-    height: 37px;
-    line-height: 16px;
+    height: 36px;
+    line-height: 28px;
     min-width: 167px;
-    vertical-align: middle;
     width: 16%;
 }
 
@@ -88,15 +91,23 @@ table {
     float: left;
     display: inline-block;
     min-width: 167px;
-    min-height: 41px;
-    vertical-align: middle;
+    min-height: 37px;
     width: 50%;
 }
 
 .adv-form {
     border: 1px solid #D9D9D9;
-    height: 22px;
-    width: 100%;
+    height: 25px;
+    width: 98%;
+}
+
+.adv-btn {
+    background-color: #4885ed;
+    border: none;
+    border-radius: 3px;
+    color: #fff;
+    padding: 7px 10px;
+    position: relative;
 }
 
 .banner {
