--- a/main.css
+++ b/main.css
@@ -13,6 +13,14 @@ nav {
     background-color: #F2F3F4;
 }
 
+.logo {
+    display: block;
+    float: left;
+    height: 30px;
+    margin: 14px;
+    width: 92px;
+}
+
 ul {
     list-style: none;
     margin: 0;
@@ -71,8 +79,8 @@ hr {
 
 table {
     border: none;
-    width: 100%;
     text-align: left;
+    width: 100%;
 }
 
 .column1 {
