added bootstrap for forms

--- a/encyclopedia/templates/encyclopedia/create.html
+++ b/encyclopedia/templates/encyclopedia/create.html
@@ -5,13 +5,23 @@
 {% endblock %}
 
 {% block body %}
-    {% if exist %}
-        <p>Entry title already exists</p>
-    {% endif %}
-    <form action="{% url 'create' %}" method="POST">
+    <h1>Create Page</h1>
+    <form class="form-group col-12" action="{% url 'create' %}" method="POST">
+        {% if exist %}
+        <div class="alert alert-danger" role="alert">
+            Entry title <strong><a class="alert-link" href="/wiki/{{ title }}">{{ title }}</a></strong> already exists.
+        </div>
+        {% endif %}
         {% csrf_token %}
-        {{ form }}
-        <input type="submit">
+        {% for field in form %}
+        <div class="mb-3">
+            <label class="form-label" for="{{ field.auto_id }}">{{ field.label }}</label>
+            {{ field }}
+        </div>
+        {% endfor %}
+        <div class="mb-3">
+            <input class="btn btn-light" type="submit">
+        </div>
     </form>
 
 {% endblock %}
