added edit function

--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -7,4 +7,5 @@
 {% block body %}
     {{ entry|safe }}
 
+    <a class="btn btn-primary" href="/wiki/{{ title|lower }}/edit" role="button">Edit</a>
 {% endblock %}
