--- a/encyclopedia/templates/encyclopedia/create.html
+++ b/encyclopedia/templates/encyclopedia/create.html
@@ -5,7 +5,11 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Create Page</h1>
+    {% if edit %}
+        <h1>Edit Page</h1>
+    {% else %}
+        <h1>Create Page</h1>
+    {% endif %}
     <form class="form-group col-12" action="{% url 'create' %}" method="POST">
         {% if exist %}
         <div class="alert alert-danger" role="alert">
@@ -13,14 +17,17 @@
         </div>
         {% endif %}
         {% csrf_token %}
-        {% for field in form %}
+        {% for field in form.visible_fields %}
         <div class="mb-3">
             <label class="form-label" for="{{ field.auto_id }}">{{ field.label }}</label>
             {{ field }}
         </div>
         {% endfor %}
+        {% for field in form.hidden_fields %}
+            {{ field }}
+        {% endfor %}
         <div class="mb-3">
-            <input class="btn btn-light" type="submit">
+            <input class="btn btn-light" type="submit" value="Save">
         </div>
     </form>
 
