changing save botton color

--- a/encyclopedia/templates/encyclopedia/create.html
+++ b/encyclopedia/templates/encyclopedia/create.html
@@ -27,7 +27,7 @@
             {{ field }}
         {% endfor %}
         <div class="mb-3">
-            <input class="btn btn-light" type="submit" value="Save">
+            <input class="btn btn-primary" type="submit" value="Save">
         </div>
     </form>
 
